force-app/main/default/objects/nFUSE__Transaction_Log__c/nFUSE__Transaction_Log__c.object-meta.xml
<CustomObject>
    <description>Log for transaction messages</description>
    <label>Transaction Log</label>
    <nameField>
        <label>Transaction Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>