force-app/main/default/objects/nFUSE__Transaction_Log__c/fields/nFUSE__Action__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Action__c</fullName>
    <description>Required text that indicates the business process for which this Transaction Log was created.</description>
    <label>Action</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>