force-app/main/default/objects/nFUSE__Transaction_Log__c/fields/nFUSE__App_Plugin__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__App_Plugin__c</fullName>
    <description>A required field indicating the service provider being utilized during this Transaction.</description>
    <label>App Plugin</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>