force-app/main/default/objects/nFUSE__Transaction_Log__c/fields/nFUSE__External_Id__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__External_Id__c</fullName>
    <description>A required field that uniquely identifiable string used for referencing this Transaction inside and outside of the nCino platform.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>