force-app/main/default/objects/nFUSE__Transaction_Log__c/fields/nFUSE__Primary_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Primary_Object_Id__c</fullName>
    <description>A required unique object identifier used to create a soft reference to an object that is related to the Transaction Log as the primary focus.</description>
    <externalId>true</externalId>
    <label>Primary Object Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>