force-app/main/default/objects/nFUSE__Transaction_Log__c/fields/nFUSE__Requested_By_User_Id__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Requested_By_User_Id__c</fullName>
    <description>The required identifier indicating the User that initiatied this Transaction.</description>
    <externalId>true</externalId>
    <label>RequestingUserId</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>