force-app/main/default/objects/nFUSE__Transaction_Log__c/fields/nFUSE__Response_Time__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Response_Time__c</fullName>
    <description>Date/Time for receiving the response message from the middlware.</description>
    <label>ResponseTime</label>
    <type>DateTime</type>
</CustomField>