force-app/main/default/objects/nFUSE__Transaction_Log__c/fields/nFUSE__Transaction_Detail__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Transaction_Detail__c</fullName>
    <description>A optional field containing a detailed message of the latest response from the middleware.</description>
    <label>TransactionDetail</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>