force-app/main/default/objects/nFUSE__Transaction_Log__c/fields/nFUSE__Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Transaction_Status__c</fullName>
    <description>A required field indicating the latest status of this Transaction through a process.</description>
    <label>TransactionStatus</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>