force-app/main/default/objects/nFUSE__Transaction_Log__c/fields/nFUSE__Vendor_Status__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Vendor_Status__c</fullName>
    <description>An optional field from the service provider communicated through the middleware indicating the status of this Transaction in their system.</description>
    <label>Vendor Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>