force-app/main/default/objects/nFUSE__Transaction_Log__c/listViews/IDology.listView-meta.xml
<ListView>
    <fullName>IDology</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>nFUSE__Vendor_Status__c</columns>
    <columns>nFUSE__Transaction_Detail__c</columns>
    <columns>nFUSE__Transaction_Status__c</columns>
    <columns>nFUSE__App_Plugin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nFUSE__App_Plugin__c</field>
        <operation>equals</operation>
        <value>Idology_Verification</value>
    </filters>
    <label>IDology</label>
    <language>en_US</language>
</ListView>